project creation add repo add services add factories add extensions

--- a/L.M.S.Application.WebApi/L.M.S.Application.WebApi.csproj
+++ b/L.M.S.Application.WebApi/L.M.S.Application.WebApi.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\L.M.S.Application\L.M.S.Application.csproj" />
   </ItemGroup>
 
 </Project>
