--- a/L.M.S.Application.WebApi/appsettings.Development.json
+++ b/L.M.S.Application.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Persistence": {
+    "DefaultConnection": "Server=ABUDAYEH98;Database=LibraryManagementDb;Trusted_Connection=True;"
   }
 }
