--- a/L.M.S.Application/L.M.S.Application.csproj
+++ b/L.M.S.Application/L.M.S.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\L.M.S.Application.Common\L.M.S.Application.Common.csproj" />
+    <ProjectReference Include="..\L.M.S.Application.Persistence\L.M.S.Application.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
