--- a/L.M.S.Application.WebApi/appsettings.Development.json
+++ b/L.M.S.Application.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "Persistence": {
-    "DefaultConnection": "Server=ABUDAYEH98;Database=LibraryManagementDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=ABUDAYEH98;Database=LibraryManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
